discussion/kv_engine/125163/125163_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 14:37:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 14:54:27.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23453/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10898/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3036/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3036/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1630/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1630/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1630/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/149/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3045/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2093/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3101/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 14:56:20.000000000
MISMATCHED INLINE COMMENT
Line:19, engines/ep/src/magma-kvstore/magma-kvstore.cc -> this should just be "objectregistry.h"
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 15:07:21.000000000
MISMATCHED INLINE COMMENT
Line:19, engines/ep/src/magma-kvstore/magma-kvstore.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 14:56:20.000000000
MISMATCHED INLINE COMMENT
Line:25, engines/ep/src/magma-kvstore/magma-kvstore.h -> Can't you just fwd declare MagmaRequest again and remove the include for metadata?
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 15:07:21.000000000
MISMATCHED INLINE COMMENT
Line:25, engines/ep/src/magma-kvstore/magma-kvstore.h -> Done
----------------------------------------------------------------------------------------------------------------------
